# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.25.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce -y (--any) to select any match field: don't miss anything.
	- Default format: new properties/restrictions separator: */^
	  Also add $sep (a tab) after version with --versionlines
	  Remove duplicate FORMAT_AFTER_IUSE (a long standing regression)
	- Fix eix-installed-after (regression introduced in eix-0.24.0)
	- Set umask 002 in eix-update unless option -o is used, see
	  http://bugs.gentoo.org/show_bug.cgi?id=408509
	- Try to fix permissions on interix, see
	  http://bugs.gentoo.org/show_bug.cgi?id=410205
	  Thanks to Gordon Cowie <gcowie at live.com> and
	  Fabian Groffen <grobian at gentoo.org>
	- Rely on working delete 0; should speed up things slightly
	- Avoid std::auto_ptr
	- Default to most current C++ dialect and use nullptr if possible
	- Add some more ATTRIBUTE_PURE
	- configure.ac: Fix usage of MV_APPEND
	- scripts: Simplify quoting slightly

*eix-0.25.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce eix-drop-permissions and use it for eix-remote
	  instead of su/sudo hacks.
	- Fix regressions: eix-remote add|fetch without temporary file,
	  and eix-remote update with temporary file.

*eix-0.25.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce EIX_PREVIOUS as default for eix-diff; remove eix-sync -d.
	- Introduce EIX_REMOTEARCHIVE; remove filename handling of eix-remote.
	- eix-remote: Pass more variables to new user.
	- Update docu to new paths and magic string (forgotten in eix-0.25.1)

*eix-0.25.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Drop all permission stuff: Only become EIX_{USER,GROUP,UID,GID} ASAP.
	  This fixes several security issues and simplifies code enormously.
	- Let DEP work with sqlite cache method (bug in eix-0.25.0).
	- Update zsh completion (including missing changes from eix-0.25.0).
	- Move all cache files into /var/cache/eix/